--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,12 @@
             <h1>Vanillajs components</h1>
             <h3>pure webstandards, almost</h3>
         </header>
-
+        
+        <section>
+            <h2>[ws-digit] Insanely overengineered timer</h2>
+            <ws-timer></ws-timer>
+        </section>
+            
         <section>
             <h2>[my-button] PlainElement buttons - webstandards only </h2>
             <div class="buttons">
@@ -33,20 +38,12 @@
         <section>
             <h2>[lith-button] LithElement button - using lit-html</h2>
             <div class="buttons">
-<<<<<<< HEAD
                 <lith-button clicks="0" color="red">A</lith-button>
-=======
-                <lith-button color="red">A</lith-button>
->>>>>>> be1065cc1a2eb1bb63f3174e82efeac2ff69c5b2
                 <lith-button color="blue">B</lith-button>
                 <lith-button color="green">C</lith-button>
                 <lith-button color="brown">D</lith-button>
                 <lith-button color="magenta">E</lith-button>
-<<<<<<< HEAD
                 <lith-button color="gold" clicks="0">F</lith-button>
-=======
-                <lith-button color="gold">F</lith-button>
->>>>>>> be1065cc1a2eb1bb63f3174e82efeac2ff69c5b2
             </div>
         </section>
 
@@ -62,6 +59,7 @@
                 text text text <h1>bla</h1>
             </ugly-paper>
         </section>
+
     </main>
     <script src="app.js" type="module"></script>
 </body>
