--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,16 @@
         </header>
         
         <section>
-            <h2>[ws-digit] Insanely overengineered timer</h2>
-            <ws-timer></ws-timer>
+            <h2>[wc-timer] Frantic timer - standards only</h2>
+            <div style="display:flex">
+                <wc-timer></wc-timer>
+                <wc-timer></wc-timer>
+                <wc-timer></wc-timer>
+            </div>
         </section>
             
         <section>
-            <h2>[my-button] PlainElement buttons - webstandards only </h2>
+            <h2>[my-button] PlainElement buttons - standards only </h2>
             <div class="buttons">
                 <my-button color="red" clicks="0" label="Click me"></my-button>
                 <my-button color="blue" clicks="0">Click more</my-button>
